--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <h3>Score:<span id="score">0</span></h3>
-    <button id="start-button">Start</button>
+    <button id="start-button">Start / Pause</button>
 
     <div class="container">
         <div class="grid">
